[gd_scene load_steps=10 format=3 uid="uid://cuqhbkv4j2b1s"]

[ext_resource type="PackedScene" uid="uid://brqvbt8euur7w" path="res://scenes/entities/player/root/player.tscn" id="1_orl44"]
[ext_resource type="Script" path="res://scripts/world/root/world.gd" id="1_w3wjl"]
[ext_resource type="PackedScene" uid="uid://bf6dnfpckiet0" path="res://scenes/world/campfire/root/campfire.tscn" id="3_4y18a"]
[ext_resource type="Shader" path="res://assets/shaders/adaptColorPallete/root/adaptColorPalleteShader.gdshader" id="5_0qmt5"]
[ext_resource type="PackedScene" uid="uid://t51b3ms8d6y2" path="res://scenes/entities/enemies/triangleEnemy/root/triangleEnemy.tscn" id="6_kyd0w"]
[ext_resource type="Texture2D" uid="uid://df6jn1bi6bye" path="res://assets/images/pallete/root/gameColorPallete.png" id="6_qahwo"]
[ext_resource type="PackedScene" uid="uid://wd7b6f7y2qqb" path="res://scenes/entities/enemies/rectangleEnemy/root/rectangleEnemy.tscn" id="7_08yjy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ad4y0"]
shader = ExtResource("5_0qmt5")
shader_parameter/palette = ExtResource("6_qahwo")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_0qgip"]
vertices = PackedVector2Array(516, 488, 516, 462, 1078, -54, 1078, 1078, 515, 462, 515, 461, 513, 461, 513, 451, 512, 451, 512, 450, 501, 450, 501, 449, 500, 449, 500, 444, 489, 444, 489, 441, 466, 441, 466, 442, 465, 442, -86, -54, 465, 443, 464, 443, 464, 444, 463, 444, 463, 449, 462, 449, 462, 450, 452, 450, 452, 451, 451, 451, 451, 461, 449, 461, 449, 462, 448, 462, 448, 488, 449, 488, 449, 489, -86, 1078, 458, 489, 458, 493, 459, 493, 459, 494, 468, 494, 468, 496, 469, 496, 469, 497, 495, 497, 495, 496, 496, 496, 496, 494, 505, 494, 505, 493, 506, 493, 506, 489, 515, 489, 515, 488)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(1, 4, 5, 2), PackedInt32Array(5, 6, 7, 2), PackedInt32Array(7, 8, 9, 2), PackedInt32Array(9, 10, 11), PackedInt32Array(11, 12, 13), PackedInt32Array(13, 14, 15), PackedInt32Array(16, 17, 18, 19), PackedInt32Array(18, 20, 21, 19), PackedInt32Array(21, 22, 23, 19), PackedInt32Array(23, 24, 25), PackedInt32Array(25, 26, 27), PackedInt32Array(27, 28, 29, 19), PackedInt32Array(29, 30, 31), PackedInt32Array(31, 32, 33), PackedInt32Array(34, 35, 36, 37), PackedInt32Array(36, 38, 39, 37), PackedInt32Array(39, 40, 41, 37), PackedInt32Array(41, 42, 43, 37), PackedInt32Array(43, 44, 45, 37), PackedInt32Array(46, 47, 48), PackedInt32Array(48, 49, 50), PackedInt32Array(50, 51, 52), PackedInt32Array(52, 53, 54), PackedInt32Array(54, 55, 0, 3), PackedInt32Array(54, 3, 37, 50), PackedInt32Array(19, 2, 9, 13), PackedInt32Array(9, 11, 13), PackedInt32Array(19, 13, 15), PackedInt32Array(19, 15, 16), PackedInt32Array(23, 25, 27, 19), PackedInt32Array(37, 19, 29, 33), PackedInt32Array(29, 31, 33), PackedInt32Array(37, 33, 34), PackedInt32Array(37, 45, 46), PackedInt32Array(46, 48, 50), PackedInt32Array(37, 46, 50), PackedInt32Array(54, 50, 52)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-353, -288, 1364, -276, 1369, 1370, -358, 1377)])

[node name="world" type="Node2D" node_paths=PackedStringArray("campfire", "resourceObjects", "resourceObjectsTimer", "constructionObjects", "entities", "forceColorPalleteShader") groups=["world"]]
script = ExtResource("1_w3wjl")
campfire = NodePath("navRegion/campfire")
resourceObjects = NodePath("navRegion/resourceObjects")
resourceObjectsTimer = NodePath("navRegion/resourceObjects/spawnResourceObjectTimer")
constructionObjects = NodePath("navRegion/constructionObjects")
entities = NodePath("navRegion/entities")
forceColorPalleteShader = NodePath("forceColorPalleteShader")

[node name="dayCicleTimer" type="Timer" parent="."]
wait_time = 45.0
autostart = true

[node name="forceColorPalleteShader" type="ColorRect" parent="."]
top_level = true
material = SubResource("ShaderMaterial_ad4y0")
offset_left = -1648.0
offset_top = -51.0
offset_right = -496.0
offset_bottom = 597.0
scale = Vector2(0.998515, 1)
pivot_offset = Vector2(576, 324)

[node name="navRegion" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_0qgip")

[node name="campfire" parent="navRegion" instance=ExtResource("3_4y18a")]
position = Vector2(482, 469)

[node name="resourceObjects" type="Node2D" parent="navRegion"]

[node name="spawnResourceObjectTimer" type="Timer" parent="navRegion/resourceObjects"]
wait_time = 0.1

[node name="constructionObjects" type="Node2D" parent="navRegion"]

[node name="entities" type="Node2D" parent="navRegion"]

[node name="player" parent="navRegion/entities" instance=ExtResource("1_orl44")]
position = Vector2(416, 494)

[node name="sounds" type="Node2D" parent="."]

[node name="triangleEnemy" parent="." instance=ExtResource("6_kyd0w")]
position = Vector2(378, 399)

[node name="rectangleEnemy" parent="." instance=ExtResource("7_08yjy")]
position = Vector2(611, 381)

[connection signal="timeout" from="dayCicleTimer" to="." method="_on_day_cicle_timer_timeout"]
[connection signal="timeout" from="navRegion/resourceObjects/spawnResourceObjectTimer" to="." method="_on_spawn_resource_object_timer_timeout"]
